gl31-master/src/test/deca/syntax/valid/sansobjet/complex_program2.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int a = 2;
    float c = 3;
    float d = readFloat();
    //boolean b = new boolean();

    while(a < 10 && b == true){
        a = a + 1;
        d = d - 1;
        if(d == 0){
            b = false;
        }
    }

    println(a*c);
    return a;
}
