gl31-master/src/test/deca/syntax/invalid/complet/bad_param2.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, paramètre mal déclaré
//
// Historique:
//    cree le 19/01/2021
class Test{
    void methodeTest(int param1, float){
        
    }
}
